# ai_agent_mvp

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
config/: settings.example.yaml
scripts/: demo_agent.py
src/: __init__.py
src/agent/: README.md  __init__.py  planner.py  report_generator.py  tools.py
src/backtest/: README.md  __init__.py  models.py  simulator.py
src/data/: README.md  __init__.py  market_data.py  mock_provider.py  models.py  volatility.py  yfinance_provider.py
src/pricing/: README.md  __init__.py  black_scholes.py
src/strategies/: README.md  __init__.py  models.py  options.py
src/utils/: README.md
src/visualization/: README.md
tests/: test_agent.py  test_backtest.py  test_black_scholes.py  test_market_data.py  test_strategies.py  test_structure.py
