[project]
name = "option-strategy-research-agent"
version = "0.1.0"
description = "A Python MVP skeleton for an options strategy research AI Agent."
readme = "README.md"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
